--- a/tableauDeBord.html
+++ b/tableauDeBord.html
@@ -13,7 +13,7 @@
             <th>email</th>
         </thead>
         <tbody>
-            <!-- imagine big fetching bad ass loop here -->
+            <!-- imagine big fetching bad loop here -->
         </tbody>
     </table>
 </body>
